<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="city_moscow">Moscow</string>
    <string name="button_moscow">Moscow</string>
    <string name="button_perm">Perm</string>
    <string name="button_petersburg">St.Petersburg</string>
    <string name="button_omsk">Omsk</string>

    <string name="weather_moscow">+15</string>
    <string name="weather_perm">+11</string>
    <string name="weather_petersburg">+14</string>
    <string name="weather_omsk">+17</string>

    <string name="wind_force_moscow">2 m/s</string>
    <string name="wind_force_perm">1 m/s</string>
    <string name="wind_force_petersburg">3 m/s</string>
    <string name="wind_force_omsk">15 m/s</string>
    <string name="wind_force">Wind force</string>

    <string name="choose_city">Choose city</string>
    <string name="select_city">Select city</string>
    <string name="settings">Settings</string>
    <string name="button_save">Save</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_authentication">Authentication</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="communicate">Communicate</string>

    <string name="title_dialog">Важное Соообщение</string>
    <string name="yes">Ok</string>
    <string name="could">На улице холодно, одевайтесь теплее</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name = "server_client_id">482321087588-cps1p9tjvdc0clql9sd5i96li202cb93.apps.googleusercontent.com</string>
</resources>
